<resources>
    <string name="app_name">Ribbit</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username_placeholder">Username</string>
    <string name="password_placeholder">Password</string>
    <string name="login_button_string">Login</string>
    <string name="signup_text">Sign up</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="email_text">Email</string>
    <string name="signup_button_text">Signup</string>
    <string name="signup_button_label">Signup</string>
    <string name="signup_error_message">Please make sure you enter the Username, Password and Email</string>
    <string name="login_error_message">Please make sure you enter a Username and Password</string>
    <string name="friends_list_error_message">We are sorry.</string>
    <string name="menu_logout_label">Logout</string>
    <string name="menu_edit_friends_label">Friends</string>
    <string name="empty_inbox_label">No new messages.</string>
    <string name="empty_friends_label">Add friends to begin.</string>
    <string name="title_activity_edit_friends">EditFriendsActivity</string>

    <string-array name="cameraOptions">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>

    <string name="title_activity_recipients">Choose Recipients</string>
    <string name="error_selecting_file">There was an error with the file selected. Please select a different file.</string>
    <string name="error_sending_message">There was an error sending your message. Please try again.</string>
    <string name="title_activity_view_image">ViewImageActivity</string>
</resources>
